--- a/src/components/App.css
+++ b/src/components/App.css
@@ -257,6 +257,10 @@ input[type="number"] {
   padding: 0 5px;
 }
 
+.input__disabled {
+  background: transparent;
+}
+
 .input__button-right {
   border-right: 2px solid #822000;
   border-top-right-radius: 0;
