--- a/src/components/App.css
+++ b/src/components/App.css
@@ -422,6 +422,7 @@ input[type="number"] {
 
 .creature-toolbar--notes__open .input-wrapper {
   border-radius: 15px 15px 0 0;
+  box-shadow: 0 5px 10px #1a1a1b;
 }
 
 .creature-toolbar--notes__open .input {
