--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,23 +1,3 @@
-*:focus {
-  outline: 2px orange solid;
-  outline-offset: 2px;
-}
-
-button:hover {
-  outline: 2px orange solid;
-  outline-offset: 2px;
-}
-
-input:hover {
-  outline: 2px orange solid;
-  outline-offset: 2px;
-}
-
-a:hover {
-  outline: 2px orange solid;
-  outline-offset: 2px;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -474,8 +454,7 @@ input[type="number"] {
 }
 
 .creature-toolbar--notes-dropdown-item:hover {
-  outline: 2px orange solid;
-  outline-offset: 2px;
+  background: #EBE1AD;
 }
 
 .creature-toolbar--notes-dropdown-group:last-child .creature-toolbar--notes-dropdown-item {
