--- a/src/components/App.css
+++ b/src/components/App.css
@@ -436,6 +436,7 @@ input[type="number"] {
   display: flex;
   cursor: pointer;
   border-bottom: 2px solid #822000;
+  height: 40px;
 }
 
 .creature-toolbar--notes-dropdown-group:last-child {
@@ -451,6 +452,9 @@ input[type="number"] {
   width: 100%;
   padding: 5px;
   border-right: 2px solid #822000;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .creature-toolbar--notes-dropdown-item:hover {
