--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,21 @@
 body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background-color: #f5f1ea;
+  font-size: 18px;
+}
+
+input {
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-size: 18px;
 }
 
@@ -132,7 +148,7 @@ input[type="number"] {
   background-color: #ebe2d3;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 0 5px #979aa4;
 }
 
@@ -376,6 +392,119 @@ input[type="number"] {
   }
 }
 
+.creature-toolbar--notes-wrapper {
+  position: relative;
+}
+
+.creature-toolbar--notes .input {
+  cursor: pointer;
+}
+
+.creature-toolbar--notes__open .input-wrapper {
+  border-radius: 15px 15px 0 0;
+  box-shadow: 0 5px 10px #1a1a1b;
+}
+
+.creature-toolbar--notes__open .input {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.creature-toolbar--notes__open .input--submit {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.creature-toolbar--notes-dropdown {
+  border-width: 0 2px 2px 2px;
+  border-color: #822000;
+  border-style: solid;
+  border-radius: 0 0 15px 15px;
+  box-shadow: 0 5px 10px #1a1a1b;
+  margin-top: 0;
+  list-style-type: none;
+  background: white;
+  padding: 0;
+  position: absolute;
+  top: 71px;
+  width: inherit;
+  box-sizing: border-box;
+  z-index: 1;
+  display: none;
+  max-height: 225px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  scrollbar-color: #822000 white;
+}
+
+.creature-toolbar--notes-dropdown::-webkit-scrollbar {
+  width: 12px;
+}
+
+.creature-toolbar--notes-dropdown::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 0 0 15px 0;
+}
+.creature-toolbar--notes-dropdown::-webkit-scrollbar-thumb {
+  background-color: #822000;
+  border-radius: 0 15px 15px 0;
+  border: 3px solid white;
+}
+
+.creature-toolbar--notes-dropdown__open {
+  display: block;
+}
+
+.creature-toolbar--notes-dropdown-expander {
+  border: none;
+  background: none;
+  box-shadow: none;
+  display: inline;
+  height: auto;
+  min-height: auto;
+}
+
+.creature-toolbar--notes-dropdown-group {
+  width: 100%;
+  display: flex;
+  cursor: pointer;
+  border-bottom: 2px solid #822000;
+  height: 40px;
+}
+
+.creature-toolbar--notes-dropdown-group:last-child {
+  border-bottom: 0;
+}
+
+.creature-toolbar--notes-dropdown-group:last-child .creature-toolbar--notes-dropdown-button {
+  border-bottom-right-radius: 15px;
+  border-bottom: 0px;
+}
+
+.creature-toolbar--notes-dropdown-item {
+  width: 100%;
+  padding: 5px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.creature-toolbar--notes-dropdown-item:hover {
+  background: #EBE1AD;
+}
+
+.creature-toolbar--notes-dropdown-item__focused {
+  background: #EBE1AD;
+}
+
+.creature-toolbar--notes-dropdown-group:last-child .creature-toolbar--notes-dropdown-item {
+  border-bottom-left-radius: 15px;
+}
+
+.creature-toolbar--notes-dropdown-button {
+  border-radius: 0;
+}
+
 /* Create creature form */
 
 .create-creature-form {
@@ -396,7 +525,7 @@ input[type="number"] {
 
 .create-creature-form--multiplier-symbol {
   margin-right: 5px;
-  margin-top: 18px;
+  margin-top: 26px;
   font-weight: 700;
 }
 
@@ -801,7 +930,7 @@ input[type="number"] {
   justify-content: space-between;
   align-items: flex-start;
   box-shadow: 0 0 5px #979aa4;
-  z-index: 1;
+  z-index: 3;
 }
 
 /*
