--- a/src/components/App.css
+++ b/src/components/App.css
@@ -42,6 +42,26 @@ button, .button {
   border: 2px dashed #822000;
 }
 
+.button__help {
+  height: auto;
+  width: auto;
+  margin: 0;
+  margin-top: 16px;
+  padding: 4px 8px 4px 2px;
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+  font-size: 16px;
+}
+
+.button__help:hover,
+.button__help:focus {
+  padding: 2px 6px 2px 0;
+  background-color: #EBE1AD;
+  border: 2px solid #822000;
+  outline-color: #822000;
+}
+
 a {
   text-decoration-color: #822000;
   color: black;
@@ -906,13 +926,6 @@ input[type="number"] {
 @media only screen and (max-width: 825px) {
   .footer-text {
     width: auto;
-  }
-}
-
-/* Hide keyboard shortcuts from devices unlikely to have a physical keyboard */ 
-@media only screen and (max-width: 1024px) {
-  .footer-text--shortcuts {
-    display: none;
   }
 }
 
