--- a/src/components/App.css
+++ b/src/components/App.css
@@ -522,30 +522,12 @@ input[type="number"] {
 }
 
 .new-creature-toolbar {
-  grid-gap: 15px;
+  grid-gap: 10px;
   grid-row-gap: 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 10px);
+  grid-template-columns: repeat(auto-fit, 18px);
   grid-auto-rows: 1fr;
   margin-left: 10px;
-}
-
-@media only screen and (max-width: 825px) {
-  .new-creature-toolbar {
-    grid-gap: 18px;
-  }
-
-  .new-creature-toolbar-button__text svg {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 825px) {
-  .new-creature-toolbar-button {
-    border: none;
-    box-shadow: none;
-    background-color: transparent;
-  }
 }
 
 .new-creature-toolbar-button {
@@ -572,6 +554,28 @@ input[type="number"] {
   padding: 5px 0;
   flex-direction: column;
   height: auto;
+}
+
+@media only screen and (max-width: 825px) {
+  .new-creature-toolbar-button__medium {
+    grid-column: span 3;
+  }
+
+  .new-creature-toolbar-button__small {
+    grid-column: span 2;
+  }
+
+  .new-creature-toolbar-button__text svg {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 825px) {
+  .new-creature-toolbar-button {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
 }
 
 /* Create creature form */
