--- a/src/components/App.css
+++ b/src/components/App.css
@@ -556,11 +556,12 @@ input[type="number"] {
   height: auto;
 }
 
-@media only screen and (max-width: 825px) {
-  .new-creature-toolbar-button__medium {
-    grid-column: span 3;
-  }
+.new-creature-toolbar-button__medium,
+.new-creature-toolbar-button__small {
+  grid-column: span 3;
+}
 
+@media only screen and (max-width: 825px) {
   .new-creature-toolbar-button__small {
     grid-column: span 2;
   }
