Highlight attack bonus & damage with different colors in creature stats block

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1270,5 +1270,24 @@ input[type="number"] {
   font-size: 14px;
 }
 
+.creature-action-description{
+  font-weight: bold;
+}
+
+.attack-highlight {
+  background-color: #ffd54f;
+  font-weight: bold;
+}
+
+.damage-highlight {
+  background-color: #f8cfcd;
+  font-weight: bold;
+}
+
+
+.Active {
+  background-color: #f48f42;
+}
+
 
 /* creature stats */
