--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1085,7 +1085,7 @@ input[type="number"] {
 }
 
 /* creature stats */
-.stat-block { text-align: left; margin: 20px; display: inline-block; vertical-align: top;  background: #FDF1DC; padding: 5px 10px 20px; box-shadow: 0 0 1.5em #867453; }
+.stat-block { text-align: left; margin: 20px; display: inline-block; vertical-align: top;  background: #FDF1DC; padding: 5px 10px 20px; box-shadow: 0 0 1.5em #867453;border-radius: 20px; }
 .stat-block.wide {  text-align: center; }
 .stat-block.wide .section-left,
 .stat-block.wide .section-right { display: inline-block; vertical-align: top; width: 48%; text-align: left; }
