--- a/src/components/App.css
+++ b/src/components/App.css
@@ -228,6 +228,7 @@ input[type="number"] {
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
+  margin-top: 2px;
 }
 
 .battle-toolbar--button {
@@ -1101,7 +1102,23 @@ input[type="number"] {
   scroll-margin-top: 120px;
 }
 
-.clickable-initiative {
-  cursor: pointer;
+.battle-toolbar--stat-value__button {
+  border: none;
+  box-shadow: none;
+  background: none;
+  min-height: auto;
+  font-size: 18px;
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  padding: 2px;
+  margin: 0;
+  display: block;
+  border-radius: 5px;
+}
+
+.battle-toolbar--stat-value__button:focus,
+.battle-toolbar--stat-value__button:hover {
+  background-color: #EBE1AD;
+  box-shadow: 0 0 7px #979aa4;
+  outline: 2px solid #822000;
 }
 /* scroll to active initiative */
