New toolbar navigation

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -533,12 +533,13 @@ input[type="number"] {
   grid-template-columns: repeat(auto-fit, 18px);
   grid-auto-rows: 1fr;
   padding: 10px;
+  border-radius: 15px;
+  background-color: #ebe2d3;
 }
 
 .new-creature-toolbar__focused {
   padding: 8px;
   border: 2px solid #822000;
-  border-radius: 15px;
   box-shadow: 0 0 5px #979aa4;
 }
 
