--- a/src/components/App.css
+++ b/src/components/App.css
@@ -563,6 +563,36 @@ input[type="number"] {
   font-weight: normal;
 }
 
+@media only screen and (max-width: 1175px) {
+  .new-creature-toolbar-button__small {
+    grid-column: span 2;
+  }
+
+  .new-creature-toolbar-button__text svg {
+    display: none;
+  }
+
+  .new-creature-toolbar-wrapper__focused .new-creature-toolbar-button__focused {
+    border: 1px solid #822000;
+    outline: 2px solid #822000;
+    outline-offset: 2px;
+  }
+}
+
+@media only screen and (min-width: 1175px) {
+  .new-creature-toolbar-button {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
+
+  .new-creature-toolbar-wrapper__focused .new-creature-toolbar-button__focused {
+    background-color: #EBE1AD;
+    border: 1px solid #822000;
+    box-shadow: 0 0 5px #979aa4;
+  }
+}
+
 .new-creature-toolbar-button:focus {
   background-color: #EBE1AD;
   border: 1px solid #822000;
@@ -588,6 +618,7 @@ input[type="number"] {
 }
 
 .new-creature-toolbar-button__text:hover,
+.new-creature-toolbar-button__focused.new-creature-toolbar-button__text,
 .new-creature-toolbar-button__text:focus {
   padding: 4px 10px;
 }
@@ -611,24 +642,6 @@ input[type="number"] {
 .new-creature-toolbar-button__medium,
 .new-creature-toolbar-button__small {
   grid-column: span 3;
-}
-
-@media only screen and (max-width: 1175px) {
-  .new-creature-toolbar-button__small {
-    grid-column: span 2;
-  }
-
-  .new-creature-toolbar-button__text svg {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 1175px) {
-  .new-creature-toolbar-button {
-    border: none;
-    box-shadow: none;
-    background-color: transparent;
-  }
 }
 
 .new-creature-toolbar .creature-toolbar--dropdown {
