--- a/src/components/App.css
+++ b/src/components/App.css
@@ -21,11 +21,7 @@ input {
 
 button, .button {
   cursor: pointer;
-  border: 2px solid #822000;
-  font-weight: bold; 
-  background-color: #EBE1AD;
   border-radius: 15px;
-  box-shadow: 0 0 5px #979AA4;
   padding: 0px;
   height: 44px;
   min-height: 44px;
@@ -36,10 +32,48 @@ button, .button {
   box-sizing: border-box;
 }
 
-.button__disabled {
+@media only screen and (min-width: 1175px) {
+  button, .button {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
+}
+
+@media only screen and (max-width: 1175px) {
+  button, .button {
+    background-color: #EBE1AD;
+    border: 1px solid #822000;
+    box-shadow: 0 0 5px #979aa4;
+  }
+
+  button[aria-disabled="true"], .button[aria-disabled="true"] {
+    background: transparent
+  }
+}
+
+button:focus, .button:focus {
+  background-color: #EBE1AD;
+  border: 1px solid #822000;
+  outline: 1px solid #822000;
+  outline-offset: 2px;
+  box-shadow: 0 0 5px #979aa4;
+}
+
+button[aria-disabled="true"]:focus, .button[aria-disabled="true"]:focus {
   background-color: transparent;
-  cursor: auto;
-  border: 2px dashed #822000;
+  outline-style: dashed;
+}
+
+button:hover, .button:hover {
+  background-color: #EBE1AD;
+  border: 1px solid #822000;
+  box-shadow: 0 0 5px #979aa4;
+}
+
+button[aria-disabled="true"]:hover, .button[aria-disabled="true"]:hover{ 
+  background-color: transparent;
+  cursor: not-allowed;
 }
 
 .button__help {
@@ -48,24 +82,30 @@ button, .button {
   margin: 0;
   margin-top: 16px;
   padding: 4px 8px 4px 2px;
-  border: none;
-  box-shadow: none;
-  background-color: transparent;
   font-size: 16px;
+  font-weight: bold;
 }
 
 .button__help:hover,
 .button__help:focus {
-  padding: 2px 6px 2px 0;
-  background-color: #EBE1AD;
-  border: 2px solid #822000;
-  box-shadow: 0 0 5px #979aa4;
-  outline: none;
+  padding: 3px 7px 3px 1px;
+}
+
+@media only screen and (max-width: 1175px) {
+  .button__help {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
 }
 
 a {
   text-decoration-color: #822000;
   color: black;
+}
+
+a:focus {
+  outline-color: #822000;
 }
 
 h1 {
@@ -124,12 +164,17 @@ a:hover {
 }
 
 .form--input {
-  border: 2px solid #822000;
+  border: 1px solid #822000;
   padding: 10px;
   border-radius: 15px;
   box-shadow: 0 0 5px #979AA4;
   width: 100%;
   min-width: 0;
+}
+
+.form--input:focus {
+  outline: none;
+  border: 2px solid #822000;
 }
 
 .form--label {
@@ -236,7 +281,7 @@ input[type="number"] {
 }
 
 .battle-toolbar--button__option {
-  margin-top: 25px;
+  margin-top: 10px;
 }
 
 .battle-toolbar--options-container {
@@ -279,20 +324,24 @@ input[type="number"] {
 
 .input-wrapper {
   display: flex;
-  border: 2px solid #822000;
   border-radius: 15px;
   box-shadow: 0 0 5px #979aa4;
-  height: 40px;
+  height: 44px;
 }
 
 .input {
   width: 100%;
-  height: 100%;
   background: white;
   border-radius: 15px;
   overflow: hidden;
   border: none;
   padding: 0 5px;
+  border: 1px solid #822000;
+}
+
+.input:focus {
+  outline: none;
+  border: 2px solid #822000;
 }
 
 .input__disabled {
@@ -301,23 +350,15 @@ input[type="number"] {
 }
 
 .input__button-right {
-  border-right: 2px solid #822000;
+  border-right: none;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.input__button-right-disabled {
-  border-right: 2px dotted #822000;
-}
-
 .input__button-left {
-  border-left: 2px solid #822000;
+  border-left: none;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-}
-
-.input__button-left-disabled {
-  border-left: 2px dotted #822000;
 }
 
 .input--submit {
@@ -326,8 +367,35 @@ input[type="number"] {
   border: none;
   box-shadow: none;
   margin: 0;
-  height: 40px;
-  min-height: 40px;
+  border: 1px solid #822000;
+}
+
+.input--submit a {
+  padding: 5px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  outline: none;
+}
+
+.input--submit:hover {
+  box-shadow: none;
+}
+
+.input--submit:focus {
+  box-shadow: none;
+  outline: none;
+  border: 2px solid #822000;
+  padding: 4px;
+}
+
+.input--submit a:focus {
+  padding: 4px 5px;
+  border: 2px solid #822000;
+}
+
+.input--submit[aria-disabled="true"]:focus {
+  outline-style: none;
+  border-style: dashed;
 }
 
 .input--submit__left {
@@ -346,7 +414,7 @@ input[type="number"] {
 }
 
 .input__error {
-  border: 2px solid red;
+  outline: 2px solid red;
 }
 
 /* Creature toolbar */
@@ -390,7 +458,7 @@ input[type="number"] {
 }
 
 .combobox-dropdown {
-  border-width: 0 2px 2px 2px;
+  border-width: 0 1px 1px 1px;
   border-color: #822000;
   border-style: solid;
   border-radius: 0 0 15px 15px;
@@ -433,11 +501,19 @@ input[type="number"] {
   min-height: auto;
 }
 
+.combobox-dropdown-expander:hover,
+.combobox-dropdown-expander:focus {
+  border: none;
+  background: none;
+  box-shadow: none;
+  outline: none;
+}
+
 .combobox-dropdown-group {
   width: 100%;
   display: flex;
   cursor: pointer;
-  border-bottom: 2px solid #822000;
+  border-bottom: 1px solid #822000;
   height: 40px;
 }
 
@@ -541,30 +617,9 @@ input[type="number"] {
   .new-creature-toolbar-button__text svg {
     display: none;
   }
-
-  .new-creature-toolbar-button[aria-disabled="true"] {
-    background-color: transparent;
-    border: 2px dashed #822000;
-  }
-
-  .new-creature-toolbar-wrapper__focused .new-creature-toolbar-button__focused {
-    border: 1px solid #822000;
-    outline: 2px solid #822000;
-    outline-offset: 2px;
-  }
-
-  .new-creature-toolbar-wrapper__focused .new-creature-toolbar-button__focused[aria-disabled="true"] {
-    outline-style: dashed;
-  }
 }
 
 @media only screen and (min-width: 1175px) {
-  .new-creature-toolbar-button {
-    border: none;
-    box-shadow: none;
-    background-color: transparent;
-  }
-
   .new-creature-toolbar-wrapper__focused .new-creature-toolbar-button__focused {
     background-color: #EBE1AD;
     border: 1px solid #822000;
@@ -572,34 +627,11 @@ input[type="number"] {
   }
 }
 
-.new-creature-toolbar-button:focus {
-  background-color: #EBE1AD;
-  border: 1px solid #822000;
-  outline: 2px solid #822000;
-  outline-offset: 2px;
-  box-shadow: 0 0 5px #979aa4;
-}
-
-.new-creature-toolbar-button[aria-disabled="true"]:focus {
-  background-color: transparent;
-  outline-style: dashed;
-}
-
-.new-creature-toolbar-button:hover {
-  background-color: #EBE1AD;
-  border: 1px solid #822000;
-  box-shadow: 0 0 5px #979aa4;
-}
-
-.new-creature-toolbar-button[aria-disabled="true"]:hover {
-  background-color: transparent;
-  cursor: not-allowed;
-}
-
 .new-creature-toolbar-button__text:hover,
 .new-creature-toolbar-button__focused.new-creature-toolbar-button__text,
 .new-creature-toolbar-button__text:focus {
   padding: 4px 10px;
+  color: black;
 }
 
 .new-creature-toolbar-button__text {
@@ -799,19 +831,28 @@ input[type="number"] {
 }
 
 .creature-expander-button {
-  border: none;
-  box-shadow: none;
+  padding: 2px 4px;
   width: auto;
   height: auto;
   align-items: baseline;
 }
 
-.creature-expander-button__disabled {
-  cursor: auto;
+.creature-expander-button:hover,
+.creature-expander-button:focus {
+  padding: 1px 3px;
+}
+
+@media only screen and (max-width: 1175px) {
+  .creature-expander-button {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
 }
 
 .creature-expander-icon {
   margin-left: 10px;
+  padding-top: 8px;
 }
 
 .creature-name {
@@ -824,6 +865,10 @@ input[type="number"] {
   text-transform: capitalize;
   background: transparent;
   align-items: center;
+}
+
+.expanded-creature {
+  padding-left: 4px;
 }
 
 @media only screen and (max-width: 825px) {
@@ -880,7 +925,7 @@ input[type="number"] {
   }
 }
 
-.creature--columns > * {
+.avoid-break {
   -webkit-column-break-inside: avoid;
   page-break-inside: avoid;
   break-inside: avoid;
@@ -888,6 +933,7 @@ input[type="number"] {
 
 .collapsed-creature {
   width: 100%;
+  padding-left: 4px;
 }
 
 .collapsed-creature--status {
@@ -961,7 +1007,6 @@ input[type="number"] {
 .creature-note-list--button {
   margin-right: 15%;
   margin-left: 5px;
-  padding: 4px;
 }
 
 @media only screen and (max-width: 825px) {
@@ -1051,8 +1096,17 @@ input[type="number"] {
 }
 
 .error-bar--dismiss {
-  border: 2px solid black;
   margin-right: 10px;
+}
+
+.error-bar--dismiss:hover {
+  border-color: black;
+  background: transparent;
+}
+
+.error-bar--dismiss:focus {
+  background: transparent;
+  outline-color: black;
 }
 
 /* Rules search bar */
@@ -1110,26 +1164,23 @@ input[type="number"] {
 }
 
 .battle-toolbar--stat-value__button {
-  border: none;
-  box-shadow: none;
-  background: none;
   min-height: auto;
   font-size: 18px;
   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  padding: 2px;
+  padding: 0 8px;
   margin: 0;
   display: block;
-  border-radius: 5px;
 }
 
-.battle-toolbar--stat-value__button-disabled {
-  cursor: auto;
+.battle-toolbar--stat-value__button:hover,
+.battle-toolbar--stat-value__button:focus {
+  padding: 0 7px;
 }
 
-.battle-toolbar--stat-value__button-enabled:focus,
-.battle-toolbar--stat-value__button-enabled:hover {
-  background-color: #EBE1AD;
-  box-shadow: 0 0 5px #979aa4;
-  outline: 2px solid #822000;
+@media only screen and (max-width: 1175px) {
+  .battle-toolbar--stat-value__button {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
 }
-/* scroll to active initiative */
