Allow a spinner to be displayed for a number input

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -191,13 +191,13 @@ a:hover {
   display: none;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
+.input__no-spinner::-webkit-inner-spin-button,
+.input__no-spinner::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
 
-input[type="number"] {
+.input__no-spinner {
     -moz-appearance: textfield;
 }
 
