Default min and max spell slots

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1258,3 +1258,7 @@ button[role=tab][aria-selected=true]:focus  {
 .spell-slot {
   grid-column: span 2;
 }
+
+.spell-slot input:invalid {
+  border-color: red;
+}
