Basic spell slot display in expanded creature

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1279,3 +1279,8 @@ button[role=tab][aria-selected=true]:focus  {
   text-decoration: line-through wavy;
   text-decoration-color: #822000;
 }
+
+.spell-slot-meter-container {
+  display: flex;
+  flex-direction: row;
+}
